# oumuamua

./: README.md  SCALING.md  dev.sh  index.html  manifest.yaml  pyproject.toml  setup.sh  tailwind.config.js  test.sh
activities/: analyst_planner_activity.py  architect_planner_activity.py  browser_actions.py  builder_planner_activity.py  critic_activity.py  devops_planner_activity.py  http_request_activity.py  inspector_planner_activity.py  memory_activities.py  scout_planner_activity.py  security_planner_activity.py  strategist_activity.py  swarm_activities.py  synthesize_activity.py  task_planner_activity.py  verifier_planner_activity.py
fixtures/: mock_extract.json  mock_navigate.json  mock_search.json
project/: acp.py  analyst_tools.py  architect_tools.py  builder_tools.py  claim_schema.py  config.py  decomposer.py  inspector_tools.py  planner.py  run_worker.py  scout_tools.py  subagent_tools.py  synthesizer.py  task_schema.py  tools.py  verifier_tools.py
tests/: test_activities.py  test_planner.py  test_workflow.py
ui/: next.config.ts  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: app-shell.tsx  browser-preview.tsx  chibi-avatar.tsx  docs-page.tsx  file-explorer.tsx  history-sidebar.tsx  message-feed.tsx  research-view.tsx  result-panel.tsx  search-home.tsx  shared-report-view.tsx  (+2 more)
workflows/: architect_agent.py  browse_subagent.py  browse_workflow.py  builder_agent.py  devops_agent.py  execution_orchestrator.py  executor_agent.py  inspector_agent.py  security_agent.py  swarm_orchestrator.py  verifier_agent.py
(+39 files in other folders)
