[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-scout"
version = "0.1.0"
description = "Agentic browser agent — prompt in, web actions out"
requires-python = ">=3.12"

dependencies = [
    "agentex-sdk",
    "scale-gp",
    "anthropic>=0.40.0",
    "temporalio>=1.7.0",
    "playwright>=1.44.0",
    "tavily-python>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "debugpy>=1.8.15",
]

[tool.hatch.build.targets.wheel]
packages = ["project", "activities", "workflows"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
